--- a/BayesianHierachical.ipynb
+++ b/BayesianHierachical.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "d9e42fb1-9edb-409b-b6cd-2c8a8f118bc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -1368,8 +1376,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "07439aee-3103-4702-9b10-43cff1462a37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: Sat Jan 21 2023\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.8\n",
+      "IPython version      : 8.8.0\n",
+      "\n",
+      "numpy     : 1.22.1\n",
+      "matplotlib: 3.6.3\n",
+      "pymc3     : 3.11.5\n",
+      "arviz     : 0.14.0\n",
+      "\n",
+      "Watermark: 2.3.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -n -u -v -iv -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6fcee85-9065-4324-ab69-b2d3af1b00de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1377,7 +1416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
