--- a/BayesianLog.ipynb
+++ b/BayesianLog.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "8e673210-f557-48ec-8254-271a46692572",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -802,8 +810,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1e3197d6-1f26-47f6-9d01-f4e7c1e0630f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: Sat Jan 21 2023\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.8\n",
+      "IPython version      : 8.8.0\n",
+      "\n",
+      "matplotlib: 3.6.3\n",
+      "pandas    : 1.5.2\n",
+      "arviz     : 0.14.0\n",
+      "pymc3     : 3.11.5\n",
+      "numpy     : 1.22.1\n",
+      "\n",
+      "Watermark: 2.3.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -n -u -v -iv -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "055330da-5e47-4508-9ca0-440ef1a08edc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -811,7 +851,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
