--- a/BayesianLr.ipynb
+++ b/BayesianLr.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "98995253-1bfc-4766-9274-d45c7bc6b6e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pymc3 as pm\n",
@@ -236,14 +244,44 @@
    "outputs": [],
    "source": [
     "#if you wantto specify which params would you like to plot\n",
-    "pm.plot_posterior(trace, varnames=['α','β'])\n",
+    "pm.plot_posterior(trace, var_names=['α','β'])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "416689c8-218c-4d8f-884e-4082ce5a8ab5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: Sat Jan 21 2023\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.8\n",
+      "IPython version      : 8.8.0\n",
+      "\n",
+      "pymc3     : 3.11.5\n",
+      "matplotlib: 3.6.3\n",
+      "numpy     : 1.22.1\n",
+      "\n",
+      "Watermark: 2.3.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -n -u -v -iv -w"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
