--- a/BayesianNN.ipynb
+++ b/BayesianNN.ipynb
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6bac502f-fe14-4873-9014-61a968dca7e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pymc3 as pm\n",
@@ -436,8 +444,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "743ecf54-176c-49b4-bd4f-e6be669e4892",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: Sat Jan 21 2023\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.8\n",
+      "IPython version      : 8.8.0\n",
+      "\n",
+      "pymc3     : 3.11.5\n",
+      "arviz     : 0.14.0\n",
+      "matplotlib: 3.6.3\n",
+      "numpy     : 1.22.1\n",
+      "\n",
+      "Watermark: 2.3.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -n -u -v -iv -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a40b0096-d6ff-4a44-9cb8-e455b10929d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
