--- a/BlogPred.ipynb
+++ b/BlogPred.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "4be6c768-adde-4ec6-a651-633e408c79cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pymc3 as pm\n",
@@ -543,8 +551,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "811ec0ee-fc60-4ed2-a5ba-c1a072aece31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: Sat Jan 21 2023\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.8\n",
+      "IPython version      : 8.8.0\n",
+      "\n",
+      "numpy     : 1.22.1\n",
+      "matplotlib: 3.6.3\n",
+      "arviz     : 0.14.0\n",
+      "pymc3     : 3.11.5\n",
+      "\n",
+      "Watermark: 2.3.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -n -u -v -iv -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b84499f-e5a3-43de-958d-11a80528fbbd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -552,7 +591,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
